--- a/ng/templates/public/index.html
+++ b/ng/templates/public/index.html
@@ -40,9 +40,10 @@
             </ul>
             <hr>
             <ul>
-                <li>http_sent_x_route: <code><!--# echo var="http_sent_x_route" --></code></li>
+                <li>sent_http_x_route: <code><!--# echo var="sent_http_x_route" --></code></li>
             </ul>
             <hr>
+            <ul>
                 <li>proxy_host: <code><!--# echo var="proxy_host" --></code></li>
                 <li>proxy_port: <code><!--# echo var="proxy_port" --></code></li>
                 <li>proxy_add_x_forwarded_for: <code><!--# echo var="proxy_add_x_forwarded_for" --></code></li>
