--- a/ng/templates/public/403.html
+++ b/ng/templates/public/403.html
@@ -9,44 +9,26 @@
         <!--# endif -->
         <style>
             body {
-                height: 80vh;
-                width: 35em;
                 margin: 0 auto;
                 font-family: Tahoma, Verdana, Arial, sans-serif;
                 display: flex;
                 align-items: center;
+                justify-content: space-around;
+            }
+            main {
+                min-height: 60vh;
+                width: 35em;
             }
         </style>
     </head>
     <body>
         <main>
-            <h1>Hello, <!--# echo var="remote_addr" default="stranger" -->!</h1>
+            <h1>
+                <code><!--# echo var="status" default="Error" --></code>
+                <!--# echo var="status_text" default="Something went wrong" -->
+            </h1>
             <p>Please authenticate to continue.</p>
-            <hr>
-            <ul>
-                <li>http_host: <code><!--# echo var="http_host" --></code></li>
-                <li>remote_addr: <code><!--# echo var="remote_addr" --></code></li>
-                <li>realip_remote_addr: <code><!--# echo var="realip_remote_addr" --></code></li>
-                <li>realip_remote_port: <code><!--# echo var="realip_remote_port" --></code></li>
-                <li>server_addr:server_port: <code><!--# echo var="server_addr" -->:<!--# echo var="server_port" --></code></li>
-                <li>http_user_agent: <code><!--# echo var="http_user_agent" --></code></li>
-            </ul>
-            <ul>
-                <li>http_x_forwarded_proto: <code><!--# echo var="http_x_forwarded_proto" --></code></li>
-                <li>http_x_forwarded_for: <code><!--# echo var="http_x_forwarded_for" --></code></li>
-                <li>http_x_real_ip: <code><!--# echo var="http_x_real_ip" --></code></li>
-                <li>http_host: <code><!--# echo var="http_host" --></code></li>
-                <li>http_host_real_ip: <code><!--# echo var="http_host_real_ip" --></code></li>
-                <li>http_referer: <code><!--# echo var="http_referer" --></code></li>
-            </ul>
-
-            <hr>
-            <p>
-                <code>
-                    <!--# echo var="status" default="403" -->
-                    <!--# echo var="status_text" default="Forbidden" -->
-                </code>
-            </p>
+            {{ file.Read "/etc/ng/templates/public/info.html" }}
         </main>
     </body>
 </html>
